--- a/Landing Page/view/evaluationSheet.html
+++ b/Landing Page/view/evaluationSheet.html
@@ -5,7 +5,7 @@
     </script>
     </head>
     <body>
-<!--Candidate Evaluation Sheet-->
+<!-- Candidate Evaluation Sheet -->
         	<section class="col-lg-6 connectedSortable">
          <div class="box box-primary" id="ces loading-example">
                                 <div class="box-header">
@@ -15,7 +15,7 @@
                                         <button class="btn btn-danger btn-sm" data-widget='collapse' data-toggle="tooltip" title="Collapse"><i class="fa fa-minus"></i></button>
                                         <button class="btn btn-danger btn-sm" data-widget='remove' data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i></button>
                                     </div><!-- /. tools -->
-                                    <i class="fa fa-edit"></i>
+                                    <i class="fa fa-file-text"></i>
 
                                     <h3 class="box-title">Candidate Evaluation Sheet</h3>
                                     </div><!-- /.box-header -->
@@ -24,7 +24,8 @@
                                 
                                 <div class="box-body table-responsive no-padding">
                                     <table class="table table-hover">
-                                        <label>&nbsp;&nbsp;&nbsp;Job Designation: ASP.NET Developer<br>&nbsp;&nbsp;&nbsp;Candidate Name: S Srivastava</label>
+                                        <label>&nbsp;&nbsp;&nbsp;Candidate Name: S Srivastava<br>&nbsp;&nbsp;&nbsp;Job Designation: ASP.NET Developer</label><br>
+                                        <strong>Round 1</strong>
                                         <br><tr>
                                             <th>Skills</th>
                                             <th>Candidate Rating</th>
@@ -35,25 +36,25 @@
                                         <tr>
                                             <td>ASP.NET</td>
                                             <td>3.5</td>
-                                            <td><input type="text" placeholder="out of 5"></td>
+                                            <td><input type="number" min="1" max="5" placeholder="out of 5"></td>
                                             
                                         </tr>
                                         <tr>
                                             <td>ASP</td>
                                             <td>3</td>
-                                            <td><input type="text" placeholder="out of 5"></td>
+                                            <td><input type="number" min="1" max="5" placeholder="out of 5"></td>
                                             
                                         </tr>
                                         <tr>
                                             <td>HTML5</td>
                                             <td>4</td>
-                                            <td><input type="text" placeholder="out of 5"></td>
+                                            <td><input type="number" min="1" max="5" placeholder="out of 5"></td>
                                             
                                         </tr>
                                         <tr>
                                             <td>CSS3</td>
                                             <td>4.5</td>
-                                            <td><input type="text" placeholder="out of 5"></td>
+                                            <td><input type="number" min="1" max="5" placeholder="out of 5"></td>
                                             
                                         </tr>
                                         
