--- a/Landing Page/view/candidateform_bk2.html
+++ b/Landing Page/view/candidateform_bk2.html
@@ -3,12 +3,12 @@
         <head>
              <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
             <link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-		
+
     <script src="../js/jquery.min.js"></script>
             <script src="../js/jquery-ui-1.10.3.min.js"></script>
-            <script src="../js/tagit/tagit.js"></script>
-            <link href="../css/tag/tagit-blue.css" rel="stylesheet"/>
-            
+            <!--<script src="../js/tagit/tagit.js"></script>
+            <link href="../css/tag/tagit-blue.css" rel="stylesheet"/>-->
+         <script src="..js/selectize.js"></script>   
        
           
             
@@ -70,8 +70,8 @@
                                             <input type="text" class="form-control" data-bind="value:contact_no" id="contact_no" placeholder="">
                                         </div><div class="form-group col-lg-12">
                                             <label for="gender">Gender</label>&nbsp;&nbsp;
-                                            <input type="radio" value="on" name="sex" data-bind="checked:isMale" >Male</input>&nbsp;&nbsp;
-                                            <input type="radio" value="on" name="sex" data-bind="checked:isFemale" >Female</input>
+                                            <input type="radio" id="gender" name="sex" value="Male" data-bind="value:sex" >Male</input>&nbsp;&nbsp;
+                                            <input type="radio" id="gender" value="Female" name="sex"data-bind="value:sex" >Female</input>
                                         </div><div class="form-group col-lg-6">
                                             <label for="place">Present Location</label>
                                             <input type="text" class="form-control" data-bind="value:place" id="place" placeholder="">
@@ -150,19 +150,21 @@
                                                 <th>Years of Experience</th>
                                             </tr>
                                                 </thead>
-                                            <tbody  data-bind="foreach:skills">
-                                            
+                                            <tbody >
+                                            <!--ko  foreach:skills-->
                                                 <tr >
                                                 <td><input type="text" class=" form-control" data-bind="value:name"></td>
                                                 <td class="starss" style="cursor:pointer;">
                                                     <input type="number" min=0 max=5 class="starinput form-control" data-bind="value:rate,valueUpdate:'afterkeydown'" style="width:100%"/>
                                                    <div data-bind="starRating:rate"> 
-                                                   </div>                           
+                                                   </div>
+                                                    
+                                                                                    
                                                 </td>
                                                 <td><input type="number" class="form-control" data-bind="value:exp"></td>
                                                 <td><a href="#" data-bind="click:removeSkill"><button class="btn btn-info"><i class="fa fa-times"></i></button></a></td>
                                             </tr>
-                                                
+                                                <!--/ko-->
                                             </tbody>
                                                 
                                              </table>
@@ -285,7 +287,7 @@
                                 that.siblings('p').remove();
                                 var path=$('#resumeupload').val();
                                 var s= path.split(".");
-                                if(s[1]!='pdf'){that.after('<p data-bind="text:resume">The file type of <strong>'+s[1]+'</strong> is not supported</p>');}
+                                if(s[1]!='pdf'){that.after('<p>The file type of '+s[1]+' is not supported</p>');}
                                 else{that.after('<p>'+$('#resumeupload').val()+'</p>');}
 
                             });
@@ -315,7 +317,7 @@
 //                    
 //                    });
                   
-                   // $('div img.rating').click(function(e){
+                    $('div img.rating').click(function(e){
                        
                         
 //                        var that=$(this);
@@ -330,7 +332,7 @@
 //                        
 //                        $(this).siblings("input").val(d);
                         
-                 //   }); 
+                    }); 
                         
                         //<!--next and previous buttons-->
                         $(".tabnext1").click(function(){
