--- a/Landing Page/view/closed.html
+++ b/Landing Page/view/closed.html
@@ -10,10 +10,26 @@
                 $(this).parent().parent().next().find(".closed_details").toggle();
                     $(this).find("i").toggleClass("fa-minus").toggleClass("fa-plus");
                 });
-                $(".candidate").click(function(e){ e.preventDefault();
-                                                            $("#first0").append("<div id='xyz'></div>");
-                                                                $("#xyz").load("cpage.html");
-                                                               });
+                      $(".cpage").click(function(e){ 
+                            e.preventDefault();
+                     
+                            var att= $("#content_blocks").find("#cpage").html();
+                            if(!att)
+                            {
+                            $("#content_blocks").find("#closed").first().append('<div id="cpage"></div>');
+                                $('#cpage').load("cpage.html");
+                            var pos1=$("#cpage section").offset();
+                             window.scrollTo(pos1.left, pos1.top);
+                             }
+                         else
+                            {
+                            var pos=$("#cpage section").offset();
+                             window.scrollTo(pos.left, pos.top);
+                            
+                               
+                            }
+                        });
+        
                 
             });
             </script>
@@ -47,9 +63,9 @@
                                        <tr><td class="well closed_details" style="text-align:center;" colspan="2"><table class="table table-hover">
                                             <tr><td style="text-align:center;">Closed on: 20.10.2014</td></tr>
                                             
-                                                    <tr><td style="text-align:center;"><strong><a href="" class="candidate">S Sinha</a></strong></td></tr>
-                                                    <tr><td style="text-align:center;"><strong><a href="" class="candidate">P Srivastava</a></strong></td></tr>
-                                                    <tr><td style="text-align:center;"><strong><a href="" class="candidate">R Gupta</a></strong></td></tr>
+                                                    <tr><td style="text-align:center;"><strong><a href="" class="cpage">S Sinha</a></strong></td></tr>
+                                                    <tr><td style="text-align:center;"><strong><a href="" class="cpage">P Srivastava</a></strong></td></tr>
+                                                    <tr><td style="text-align:center;"><strong><a href="" class="cpage">R Gupta</a></strong></td></tr>
                                                     </table>  
                                             </td>
                                         </tr>
@@ -61,9 +77,9 @@
                                        <tr><td class="well closed_details" style="text-align:center;" colspan="2"><table class="table table-hover">
                                             <tr><td style="text-align:center;">Closed on: 20.10.2014</td></tr>
                                             
-                                                    <tr><td style="text-align:center;"><strong><a href="" class="candidate">S Sinha</a></strong></td></tr>
-                                                    <tr><td style="text-align:center;"><strong><a href="" class="candidate">P Srivastava</a></strong></td></tr>
-                                                    <tr><td style="text-align:center;"><strong><a href="" class="candidate">R Gupta</a></strong></td></tr>
+                                                    <tr><td style="text-align:center;"><strong><a href="" class="cpage">S Sinha</a></strong></td></tr>
+                                                    <tr><td style="text-align:center;"><strong><a href="" class="cpage">P Srivastava</a></strong></td></tr>
+                                                    <tr><td style="text-align:center;"><strong><a href="" class="cpage">R Gupta</a></strong></td></tr>
                                                     </table>  
                                             </td>
                                         </tr>
@@ -75,9 +91,9 @@
                                        <tr><td class="well closed_details" style="text-align:center;" colspan="2"><table class="table table-hover">
                                             <tr><td style="text-align:center;">Closed on: 20.10.2014</td></tr>
                                             
-                                                    <tr><td style="text-align:center;"><strong><a href="" class="candidate">S Sinha</a></strong></td></tr>
-                                                    <tr><td style="text-align:center;"><strong><a href="" class="candidate">P Srivastava</a></strong></td></tr>
-                                                    <tr><td style="text-align:center;"><strong><a href="" class="candidate">R Gupta</a></strong></td></tr>
+                                                    <tr><td style="text-align:center;"><strong><a href="" class="cpage">S Sinha</a></strong></td></tr>
+                                                    <tr><td style="text-align:center;"><strong><a href="" class="cpage">P Srivastava</a></strong></td></tr>
+                                                    <tr><td style="text-align:center;"><strong><a href="" class="cpage">R Gupta</a></strong></td></tr>
                                                     </table>  
                                             </td>
                                         </tr>
@@ -89,9 +105,9 @@
                                        <tr><td class="well closed_details" style="text-align:center;" colspan="2"><table class="table table-hover">
                                             <tr><td style="text-align:center;">Closed on: 20.10.2014</td></tr>
                                             
-                                                    <tr><td style="text-align:center;"><strong><a href="" class="candidate">S Sinha</a></strong></td></tr>
-                                                    <tr><td style="text-align:center;"><strong><a href="" class="candidate">P Srivastava</a></strong></td></tr>
-                                                    <tr><td style="text-align:center;"><strong><a href="" class="candidate">R Gupta</a></strong></td></tr>
+                                                    <tr><td style="text-align:center;"><strong><a href="" class="cpage">S Sinha</a></strong></td></tr>
+                                                    <tr><td style="text-align:center;"><strong><a href="" class="cpage">P Srivastava</a></strong></td></tr>
+                                                    <tr><td style="text-align:center;"><strong><a href="" class="cpage">R Gupta</a></strong></td></tr>
                                                     </table>  
                                             </td>
                                         </tr>
