--- a/Landing Page/view/drafts.html
+++ b/Landing Page/view/drafts.html
@@ -1,147 +1,111 @@
 <!DOCTYPE html>
 <html>
-<head>
-<script src="../js/jquery.min.js"></script>
-    </script>
-<script>  $("#add_new").click(function(e){ e.preventDefault();
-                                                            $("#first0").append("<div id='xyz'></div>");
-                                                                $("#xyz").load("requisition.html");
-                                                               });</script>
-</head>
-<body>
-		
-                         
-    <!-- DRAFTS -->   
-                         
-                     <section class="col-lg-6 "> 
-                         
-                           <div class="box box-primary" style="padding-top:5px">
-                                <div class="box-header">
-                                    <!-- tools box -->
-                                    <div class="pull-right ">
+    
+    <head>
+        <script src="../js/jquery.min.js"></script>
+        <script src="../js/knockout.js"></script>
+        <script src="../viewModel/draftsViewModel.js"></script>
+        <script>
+            $(".requisition").click(function(e) {
+                e.preventDefault();
+                var cls = $(this).attr("class");
 
-                                         <button class="btn btn-danger btn-sm refresh-btn" data-widget="refresh" data-toggle="tooltip" title="Reload"><i class="fa fa-refresh"></i></button>
-                                        <button class="btn btn-danger btn-sm" data-widget='collapse' data-toggle="tooltip" title="Collapse"><i class="fa fa-minus"></i></button>
-                                        <button class="btn btn-danger btn-sm" data-widget='expand' data-toggle="tooltip" title="Expand" style="display:none"><i class="fa fa-plus"></i></button>
-                                        <button class="btn btn-danger btn-sm" data-widget='remove' data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i></button>
-										
+                cls = cls.split(" ");
+                var divName = cls[3];
 
-                                    </div><!-- /. tools -->
-                                   <h3 class="box-title">Drafts</h3>
-                                </div><!-- /.box-header -->
-                                <div class="box-body">
-                                    <div class="box-tools pull-right">
-                                        <ul class="pagination pagination-sm inline">
-                                            <li><a href="#">&laquo;</a></li>
-                                            <li><a href="#">1</a></li>
-                                            <li><a href="#">2</a></li>
-                                            <li><a href="#">3</a></li>
-                                            <li><a href="#">&raquo;</a></li>
-                                        </ul>
-                                    </div>
-                                    <br><br>
-                                    <ul class="todo-list">
-                                        <li>
-                                            <!-- drag handle -->
-                                            <span class="handle">
-                                                <i class="fa fa-ellipsis-v"></i>
-                                                <i class="fa fa-ellipsis-v"></i>
-                                            </span>  
-                                            <!-- checkbox -->
-                                            <input type="checkbox" value="" name=""/>                                            
-                                            <!-- todo text -->
-                                            <span class="text">Systems analyst - 2 Openings</span>
-                                            <!-- Emphasis label -->
-                                            <small class="label label-success"><i class="fa fa-clock-o"></i> [17-06-2014]</small>
-                                            <!-- General tools such as edit or delete-->
-                                            <div class="tools">
-                                                <i class="fa fa-edit"> Edit</i>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <span class="handle">
-                                                <i class="fa fa-ellipsis-v"></i>
-                                                <i class="fa fa-ellipsis-v"></i>
-                                            </span>                                            
-                                            <input type="checkbox" value="" name=""/>
-                                            <span class="text">Technical Writer - 3 Openings</span>
-                                            <small class="label label-success"><i class="fa fa-clock-o"></i> [15-06-2014]</small>
-                                            <div class="tools">
-                                                <i class="fa fa-edit"> Edit</i>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <span class="handle">
-                                                <i class="fa fa-ellipsis-v"></i>
-                                                <i class="fa fa-ellipsis-v"></i>
-                                            </span>
-                                            <input type="checkbox" value="" name=""/>
-                                            <span class="text">Software Architect - 1 Opening</span>
-                                            <small class="label label-success"><i class="fa fa-clock-o"></i> [07-06-2014]</small>
-                                            <div class="tools">
-                                                <i class="fa fa-edit"> Edit</i>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <span class="handle">
-                                                <i class="fa fa-ellipsis-v"></i>
-                                                <i class="fa fa-ellipsis-v"></i>
-                                            </span>
-                                            <input type="checkbox" value="" name=""/>
-                                            <span class="text">QA Engineer - 2 Openings</span>
-                                            <small class="label label-success"><i class="fa fa-clock-o"></i> [06-06-2014]</small>
-                                            <div class="tools">
-                                                <i class="fa fa-edit"> Edit</i>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <span class="handle">
-                                                <i class="fa fa-ellipsis-v"></i>
-                                                <i class="fa fa-ellipsis-v"></i>
-                                            </span>
-                                            <input type="checkbox" value="" name=""/>
-                                            <span class="text">Technical support engineer - 4 Openings</span>
-                                            <small class="label label-success"><i class="fa fa-clock-o"></i> [28-05-2014]</small>
-                                            <div class="tools">
-                                                <i class="fa fa-edit"> Edit</i>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <span class="handle">
-                                                <i class="fa fa-ellipsis-v"></i>
-                                                <i class="fa fa-ellipsis-v"></i>
-                                            </span>
-                                            <input type="checkbox" value="" name=""/>
-                                            <span class="text">Network engineer - 2 Openings</span>
-                                            <small class="label label-success"><i class="fa fa-clock-o"></i> [17-05-2014]</small>
-                                            <div class="tools">
-                                                <i class="fa fa-edit"> Edit</i>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                    
-                                <div class="tools">
-                                        <div class="box-footer clearfix no-border">
-                                        <button class="btn btn-default pull-left"><i class="fa fa-times"></i> Discard</button>
-                                        <button class="btn btn-default pull-right" id="add_new"><i class="fa fa-plus"></i>Add New Requisition</button>
-                                        </div>
-                                </div>
-                                </div><!-- /.box-body -->
-                            </div><!-- /.box -->
-                         </section>
-                         
-            <!--DRAFTS ENDS-->    
-       <!-- jQuery 2.0.2 -->
-      <!--  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+                var att = $("#content_blocks").find("#" + divName).html();
+                if (!att) {
+                    $("#content_blocks").find("#drafts").first().append('<div id=' + divName + '></div>');
+                    $('#' + divName).load(divName + ".html");
+                    var pos1 = $("#" + divName + " section").offset();
+                    alert(pos1.left);
+                    window.scrollTo(pos1.left, pos1.top);
+                } else {
+                    var pos = $("#" + divName + " section").offset();
+                    window.scrollTo(pos.left, pos.top);
+
+
+                }
+            });
+        </script>
+    </head>
+    
+    <body>
+        <!-- DRAFTS -->
+        <section class="col-lg-6 ">
+            <div class="box box-primary" style="padding-top:5px">
+                <div class="box-header">
+                    <!-- tools box -->
+                    <div class="pull-right ">
+                        <button class="btn btn-danger btn-sm refresh-btn" data-widget="refresh" data-toggle="tooltip" title="Reload"><i class="fa fa-refresh"></i>
+                        </button>
+                        <button class="btn btn-danger btn-sm" data-widget='collapse' data-toggle="tooltip" title="Collapse"><i class="fa fa-minus"></i>
+                        </button>
+                        <button class="btn btn-danger btn-sm" data-widget='expand' data-toggle="tooltip" title="Expand" style="display:none"><i class="fa fa-plus"></i>
+                        </button>
+                        <button class="btn btn-danger btn-sm" data-widget='remove' data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i>
+                        </button>
+                    </div>
+                    <!-- /. tools -->
+                     <h3 class="box-title editme">Drafts</h3>
+
+                </div>
+                <!-- /.box-header -->
+                <div class="box-body">
+                   <!-- <div class="box-tools pull-right">
+                        <ul class="pagination pagination-sm inline">
+                            <li><a href="#">&laquo;</a>
+                            </li>
+                            <li><a href="#">1</a>
+                            </li>
+                            <li><a href="#">2</a>
+                            </li>
+                            <li><a href="#">3</a>
+                            </li>
+                            <li><a href="#">&raquo;</a>
+                            </li>
+                        </ul>
+                    </div>-->
+                    <br>
+                    <br>
+                    <ul class="todo-list" data-bind="foreach : requests()">
+                        <li>
+                            <input type="checkbox" value="" name="" /> <span class="text" data-bind="text:jobTitles"></span> - <span data-bind="text:numberOfPositions"></span> openings <small class="label label-success" data-bind="text:dateOfClosing"><i class="fa fa-clock-o"></i></small>
+
+                           <!-- <div class="tools"> <i class="fa fa-edit editme requisition"> Edit</i>-->
+
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="tools">
+                        <div class="box-footer clearfix no-border">
+                <!--            <button class="btn btn-default pull-left removeDraft"><i class="fa fa-times"></i> Discard</button>-->
+                            <button class="btn btn-default pull-right requisition"><i class="fa fa-plus"></i>Add New Requisition</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.box-body -->
+            </div>
+            <!-- /.box -->
+        </section>
+        <!--DRAFTS ENDS-->
+        <!-- jQuery 2.0.2 -->
+        <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
         <!-- jQuery UI 1.10.3 -->
         <script src="../js/jquery-ui-1.10.3.min.js" type="text/javascript"></script>
+        <script>
+            $(document).ready(function() {
+                ko.applyBindings(draftsViewModel);
+
+
+            });
+        </script>
         <!-- Bootstrap -->
         <script src="../js/bootstrap.min.js" type="text/javascript"></script>
         <!-- AdminLTE App -->
         <script src="../js/prorecruit/app.js" type="text/javascript"></script>
         <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-        <script src="../js/prorecruit/dashboard.js" type="text/javascript"></script>     
-      </body>
-</html>     
-                         
-                         
+        <script src="../js/prorecruit/dashboard.js" type="text/javascript"></script>
+    </body>
+
+</html>
