--- a/Landing Page/view/editprofile.html
+++ b/Landing Page/view/editprofile.html
@@ -3,23 +3,65 @@
 <html>
 <head>
 <script src="../js/jquery.min.js"></script>
+<script src="../viewModel/vm_editprofile.js"></script>
+<script src="../js/knockout.js"></script>
 <script>
 $(document).ready(function(e){
 	$("#show_pass").hide();
+    $("#alert_pass").hide();
 	$("#edit_pass").click(function(e){
 	e.preventDefault();
-		$("#show_pass").toggle();
+		$("#show_pass").show();
+        $("#save_pass").click(function(e){
+	e.preventDefault();
+        $("#show_pass").hide();
+        $("#alert_pass").show();
+        });
+        $("#cancel_pass").click(function(e){
+	e.preventDefault();
+        $("#show_pass").hide();
+        });
 	});
 });
 </script>
 <script>
 $(document).ready(function(e){
 	$("#show_pic").hide();
+    $("#alert_pic").hide();
 	$("#edit_pic").click(function(e){
 	e.preventDefault();
-		$("#show_pic").toggle();
+		$("#show_pic").show();
+        $("#save_pic").click(function(e){
+	e.preventDefault();
+        $("#show_pic").hide();
+        $("#alert_pic").show();
+        });
+        $("#cancel_pic").click(function(e){
+	e.preventDefault();
+        $("#show_pic").hide();
+        });
 	});
 });
+</script>
+<script>
+$(document).ready(function(e){
+	$("#show_name").hide();
+	$("#edit_name").click(function(e){
+	e.preventDefault();
+		$("#show_name").show();
+        $("#save_name").click(function(e){
+	e.preventDefault();
+        $("#show_name").hide();
+        });
+        $("#cancel_name").click(function(e){
+	e.preventDefault();
+        $("#show_name").hide();
+        });
+	});
+});
+  
+ko.applyBindings(obj);
+    
 </script>
 
 </head>
@@ -38,7 +80,7 @@ $(document).ready(function(e){
 
                                     </div><!-- /. tools -->
                                    
-                                    <i class="ion ion-person-add"></i>
+                                    <i class="fa fa-gear"></i>
 
                                     <h3 class="box-title">Edit Profile</h3>
                                 </div><!-- /.box-header -->
@@ -47,8 +89,25 @@ $(document).ready(function(e){
 									<form role="form">
                                     <div class="box-body">
 										<div class="form-group">
-                                            <label>Name :</label>
-											<div><label>Arun Chauhan</label></div>
+                                            <label>Name :<span data-bind="text:fullName"></span></label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                            <a href="" id="edit_name">Edit</a>
+                                            <div class="well" id="show_name">
+												<div class="form-group">
+													<label>Enter First Name : </label>
+													<input data-bind="value:firstName"/> 
+												</div>
+                                                <div class="form-group">
+													<label>Enter Last Name : </label>
+													<input data-bind="value:lastName"/> 
+												</div>
+                                                <div class="form-group">
+                                                    <label>Full Name : </label>
+                                                    <label data-bind="text:fullName"></label>
+                                                </div>
+												<button type="submit" id="save_name" class="btn btn-success">Save</button>
+												<button type="reset" id="cancel_name" class="btn btn-default">Cancel</button>
+											</div>
+											<div id="edited"><label>Deepak Mahapatra</label></div>
 										</div>
 										<div class="form-group">
 											<label>Your Location :</label>
@@ -74,24 +133,32 @@ $(document).ready(function(e){
 													<label>Re-type Password :</label>
 													<input type="password"/> 
 												</div>
-												<button type="submit" class="btn btn-success">Save</button>
-												<button type="reset" class="btn btn-default">Cancel</button>
+												<button type="submit" id="save_pass" class="btn btn-success">Save</button>
+												<button type="reset" id="cancel_pass" class="btn btn-default">Cancel</button>
 											</div>
+                                            <div id="alert_pass" class="alert alert-success alert-dismissable">
+                                                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                                                    <b>Password changed !</b>
+                                            </div>
 										</div>
 										<div class="form-group">
 											<label>Display Picture</label>&nbsp;&nbsp;&nbsp;&nbsp;
 											<a href="" id="edit_pic">Change</a>
 											<div class="well" id="show_pic">
 												<div class="form-group">
-													<label for="exampleInputFile">Upload Image</label>
-													<input type="file" accept="image/x-png, image/jpeg" id="exampleInputFile">
-													<p class="help-block">jpeg or png</p>
-												</div>
-												<button type="submit" class="btn btn-success">Save</button>
-												<button type="reset" class="btn btn-default">Cancel</button>
-											</div>
-										
-										</div>
+													<label for="exampleInputFile">Upload Image</label><br>
+												    <input type="file" accept="image/*" id="picupload" style="display:none">
+                                                    <button type="button" class="btn btn-lg uploadpic fa fa-paperclip"></button>
+                                                    <span class="help-block">JPEG or PNG (Max Size: 1MB)</span>
+                                                </div>
+												<button type="submit" id="save_pic" class="btn btn-success">Save</button>
+												<button type="reset" id="cancel_pic" class="btn btn-default">Cancel</button>
+                                            </div>
+                                            <div id="alert_pic" class="alert alert-success alert-dismissable">
+                                                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                                                    <b>Profile picture changed !</b>
+                                            </div>
+								        </div>
 									</div><!-- /.box-body -->
 									
                                 </form>
@@ -99,6 +166,24 @@ $(document).ready(function(e){
 							</section>
 				<!-- Edit Profile form ends-->
    <!-- jQuery 2.0.2 -->
+                                
+        <script>
+               $(document).ready(function(e){
+                        $("button.uploadpic").click(function(){
+                            var that=$(this);
+                            $("#picupload").trigger('click');
+                            $('#picupload').change(function() {
+                                that.siblings('p').remove();
+                                var path=$('#picupload').val();
+                                var s= path.split(".");
+                                if(s[1]!='jpg' || s[1]!='png'){that.after('<p>The file type of '+s[1]+' is not supported</p>');}
+                                else{that.after('<p>'+$('#picupload').val()+'</p>');}
+
+                            });
+                        });
+                    });                                
+        </script>
+                                
       <!--  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
         <!-- jQuery UI 1.10.3 -->
         <script src="../js/jquery-ui-1.10.3.min.js" type="text/javascript"></script>
