--- a/Landing Page/view/indexcandidateform.html
+++ b/Landing Page/view/indexcandidateform.html
@@ -15,14 +15,24 @@
      
            </head>
         <body>
-	
- <div class="container">
+	 
+
+     <section  class="col-lg-12"> 
      
     
-                            
+                        <div class="box box-primary" style="padding-top:5px">    
                             
                                 <div class="box-header">
-                                  
+                                      <div class="pull-right ">
+                        <button class="btn btn-danger btn-sm refresh-btn" data-widget="refresh" data-toggle="tooltip" title="Reload"><i class="fa fa-refresh"></i>
+                        </button>
+                        <button class="btn btn-danger btn-sm" data-widget='collapse' data-toggle="tooltip" title="Collapse"><i class="fa fa-minus"></i>
+                        </button>
+                        <button class="btn btn-danger btn-sm" data-widget='expand' data-toggle="tooltip" title="Expand" style="display:none"><i class="fa fa-plus"></i>
+                        </button>
+                        <button class="btn btn-danger btn-sm" data-widget='remove' data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i>
+                        </button>
+                    </div>
                                     
                                         <h3 class="box-title"><i class="fa fa-pencil"></i>&nbsp;Candidate Form</h3>
                                  </div><!-- /.box-header -->
@@ -234,10 +244,10 @@
 										          
 										            <button type="button"  class="btn btn-danger">Cancel</button>
                                                </div>	
-                                    </div></div></div>
-                                    
- </div>
-                            
+                                    </div></div></div></div>
+  </section>                                  
+ 
+                           
 <!--/Candidate Form-->
    <!-- jQuery 2.0.2 -->
       <!--  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
@@ -363,8 +373,12 @@
         </script>
 
 
+                 <script src="../js/bootstrap.min.js" type="text/javascript"></script>
+            <!-- AdminLTE App -->
+            <script src="../js/prorecruit/app.js" type="text/javascript"></script>
             <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-            <script src="../js/prorecruit/dashboard.js" type="text/javascript"></script> 
+            <script src="../js/prorecruit/dashboard.js" type="text/javascript"></script>
+              
  
           </body>
     </html>      
