--- a/Landing Page/view/ongoing.html
+++ b/Landing Page/view/ongoing.html
@@ -14,26 +14,53 @@
             });
             </script>
     <script>
-      $("#refer1, #refer2, #refer3, #refer4").click(function(e){ e.preventDefault();
-                                                            $("#first0").after("<div id='xyz'></div>");
-                                                                $("#xyz").load("refer.html");
-                                                               });
-      $("#promote1, #promote2, #promote3, #promote4").click(function(e){ e.preventDefault();
-                                                            $("#first0").after("<div id='abc'></div>");
-                                                                $("#abc").load("promote.html");
-                                                               });
-              $(".vacancy_details").click(function(e){ e.preventDefault();
-                                                            $("#first0").after("<div id='xyz'></div>");
-                                                                $("#xyz").load("vacancy_details.html");
-                                                               });
-        $(".schedule").click(function(e){ e.preventDefault();
-                                                            $("#first0").after("<div id='xyz'></div>");
-                                                                $("#xyz").load("round_schedule.html");
-                                                               });
-         $(".closeit").click(function(e){ e.preventDefault();
-                                                            $("#first0").append("<div id='xyz'></div>");
-                                                                $("#xyz").load("close_position.html");
-                                                               });  
+           $(".menuOngoing").click(function(e){ 
+                            e.preventDefault();
+                            var cls=$(this).attr("class");
+       
+                    cls=cls.split(" ");
+                    var divName =cls[1];
+                            var att= $("#content_blocks").find("#"+divName).html();
+                            if(!att)
+                            {
+                            $("#content_blocks").find("#ongoing").first().append('<div id='+divName+'></div>');
+                                $('#'+divName).load(divName+".html");
+                            var pos1=$("#"+divName+" section").offset();
+                             window.scrollTo(pos1.left, pos1.top);
+                             }
+                         else
+                            {
+                            var pos=$("#"+divName+" section").offset();
+                             window.scrollTo(pos.left, pos.top);
+                            
+                               
+                            }
+                        });
+        
+        $(".menuOn").click(function(e){ 
+                            e.preventDefault();
+                            var cls=$(this).attr("class");
+       
+                    cls=cls.split(" ");
+                    var divName =cls[4];
+                            var att= $("#content_blocks").find("#"+divName).html();
+                            if(!att)
+                            {
+                              $("#content_blocks #ongoing").append('<div id='+divName+'></div>');
+                                $('#'+divName).load(divName+".html");
+                            var pos1=$("#"+divName+" section").offset();
+                                
+                             window.scrollTo(pos1.left, pos1.top);
+                             }
+                         else
+                            {
+                            var pos=$("#"+divName+" section").offset();
+                             window.scrollTo(pos.left, pos.top);
+                            
+                               
+                            }
+                        });
+           
         </script>
     </head>
     <body>
@@ -65,20 +92,20 @@
                                         
                                      
                                             <tr class="sib-detail"><td class="well show_details" style="text-align:center;" colspan="2"><table class="table table-hover">
-                                            <tr><td colspan="3" style="text-align:center;">Want to refer a candidate???<a href="" id="refer1"> Click here</a> to fill the Referral form</td></tr>
-                                            <tr><td colspan="3" style="text-align:center;"><a href="" id="promote1">Promote</a> this job</td></tr>
+                                            <tr><td colspan="3" style="text-align:center;">Want to refer a candidate???<a href="" class="menuOngoing refer"> Click here</a> to fill the Referral form</td></tr>
+                                            <tr><td colspan="3" style="text-align:center;"><a href="" class="menuOngoing promote">Promote</a> this job</td></tr>
                                                     <tr><td><strong>HR Screening</strong></td>
                                                         <td>Started:5th of June</td>
-                                                         <td ><button class="btn btn-primary btn-sm vacancy_details">View Details</button></td></tr>
+                                                         <td ><button class="btn btn-primary btn-sm menuOn vacancy_details">View Details</button></td></tr>
                                                     <tr><td><strong>Technical Round1</strong></td>
                                                         <td>Started:15th of June</td>
-                                                         <td><button class="btn btn-primary btn-sm vacancy_details">View Details</button></td></tr>
+                                                         <td><button class="btn btn-primary btn-sm menuOn vacancy_details">View Details</button></td></tr>
                                             <tr><td><strong>Technical Round2</strong></td>
                                                         <td>Started:25th of June</td>
-                                                         <td><button class="btn btn-primary btn-sm vacancy_details">View Details</button></td></tr>
+                                                         <td><button class="btn btn-primary btn-sm menuOn vacancy_details">View Details</button></td></tr>
                                             <tr><td><strong>Final HR Round</strong></td>
                                                         <td>Not Yet Started</td>
-                                                        <td><button class="btn btn-primary btn-sm schedule">Schedule</button></td>
+                                                        <td><button class="btn btn-primary btn-sm menuOn round_schedule">Schedule</button></td>
                                                         </tr>
                                             </table>  
                                             </td>
@@ -88,21 +115,21 @@
                                        <td><button class="btn btn-primary btn-sm view_details"><i class="fa fa-plus"></i></button></td>
                                     </tr>
                                          <tr class="sib-detail"><td class="well show_details" style="text-align:center;" colspan="2"><table class="table table-hover">
-                                            <tr><td colspan="3" style="text-align:center;">Want to refer a candidate???<a href="" id="refer2"> Click here</a> to fill the Referral form</td></tr>
-                                            <tr><td colspan="3" style="text-align:center;"><a href="" id="promote2">Promote</a> this job</td></tr>
+                                            <tr><td colspan="3" style="text-align:center;">Want to refer a candidate???<a href="" class="menuOngoing refer"> Click here</a> to fill the Referral form</td></tr>
+                                            <tr><td colspan="3" style="text-align:center;"><a href="" class="menuOngoing promote">Promote</a> this job</td></tr>
                                                     <tr><td><strong>HR Screening</strong></td>
                                                         <td>Started:5th of June</td>
-                                                         <td style="text-align:center;"><button class="btn btn-primary btn-sm vacancy_details">View Details</button></td></tr>
+                                                         <td style="text-align:center;"><button class="btn btn-primary btn-sm menuOn vacancy_details">View Details</button></td></tr>
                                                     <tr><td><strong>Technical Round1</strong></td>
                                                         <td>Started:15th of June</td>
-                                                         <td  style="text-align:center;"><button class="btn btn-primary btn-sm vacancy_details">View Details</button></td></tr>
+                                                         <td  style="text-align:center;"><button class="btn btn-primary btn-sm menuOn vacancy_details">View Details</button></td></tr>
                                             <tr><td><strong>Technical Round2</strong></td>
                                                         <td>Started: 1st July</td>
-                                                        <td  style="text-align:center;"><button class="btn btn-primary btn-sm vacancy_details">View Details</button></td></tr>
+                                                        <td  style="text-align:center;"><button class="btn btn-primary btn-sm menuOn vacancy_details">View Details</button></td></tr>
                                             <tr><td><strong>Final HR Round</strong></td>
                                                         <td>Started: 5th of July</td>
-                                                        <td style="text-align:center;"><button class="btn btn-primary btn-sm vacancy_details" >View Details</button>
-                                                <button class="btn btn-warning btn-sm closeit">Close Vacancy</button></td>
+                                                        <td style="text-align:center;"><button class="btn btn-primary btn-sm menuOn vacancy_details" >View Details</button>
+                                                <button class="btn btn-warning btn-sm menuOn close_position">Close Vacancy</button></td>
                                                         </tr>
                                             </table>  
                                             </td>
@@ -112,20 +139,20 @@
                                       <td><button class="btn btn-primary btn-sm view_details"><i class="fa fa-plus"></i></button></td>
                                     </tr>
                                          <tr><td class="well show_details" style="text-align:center;" colspan="2"><table class="table table-hover">
-                                            <tr><td colspan="3" style="text-align:center;">Want to refer a candidate???<a href="" id="refer3"> Click here</a> to fill the Referral form</td></tr>
-                                            <tr><td colspan="3" style="text-align:center;"><a href="" id="promote3">Promote</a> this job</td></tr>
+                                            <tr><td colspan="3" style="text-align:center;">Want to refer a candidate???<a href="" class="menuOngoing refer"> Click here</a> to fill the Referral form</td></tr>
+                                            <tr><td colspan="3" style="text-align:center;"><a href="" class="menuOngoing promote">Promote</a> this job</td></tr>
                                                     <tr><td><strong>HR Screening</strong></td>
                                                         <td>Started:5th of June</td>
-                                                         <td><button class="btn btn-primary btn-sm vacancy_details">View Details</button></td></tr>
+                                                         <td><button class="btn btn-primary btn-sm menuOn vacancy_details">View Details</button></td></tr>
                                                     <tr><td><strong>Technical Round1</strong></td>
                                                         <td>Started:15th of June</td>
-                                                         <td><button class="btn btn-primary btn-sm vacancy_details">View Details</button></td></tr>
+                                                         <td><button class="btn btn-primary btn-sm menuOn vacancy_details">View Details</button></td></tr>
                                             <tr><td><strong>Technical Round2</strong></td>
                                                         <td>Started:25th of June</td>
-                                                         <td><button class="btn btn-primary btn-sm vacancy_details">View Details</button></td></tr>
+                                                         <td><button class="btn btn-primary btn-sm menuOn vacancy_details">View Details</button></td></tr>
                                             <tr><td><strong>Final HR Round</strong></td>
                                                         <td>Not Yet Started</td>
-                                                        <td><button class="btn btn-primary btn-sm schedule">Schedule</button></td>
+                                                        <td><button class="btn btn-primary btn-sm menuOn round_schedule">Schedule</button></td>
                                                         </tr>
                                             </table>  
                                             </td>
@@ -135,20 +162,20 @@
                                     <td><button class="btn btn-primary btn-sm view_details"><i class="fa fa-plus"></i></button></td>
                                     </tr>
                                          <tr><td class="well show_details" style="text-align:center;" colspan="2"><table class="table table-hover">
-                                            <tr><td colspan="3" style="text-align:center;">Want to refer a candidate???<a href="http://google.com" id="refer4"> Click here</a> to fill the Referral form</td></tr>
-                                            <tr><td colspan="3" style="text-align:center;"><a href="" id="promote4">Promote</a> this job</td></tr>
+                                            <tr><td colspan="3" style="text-align:center;">Want to refer a candidate???<a href="" class="menuOngoing refer"> Click here</a> to fill the Referral form</td></tr>
+                                            <tr><td colspan="3" style="text-align:center;"><a href="" class="menuOngoing promote">Promote</a> this job</td></tr>
                                                     <tr><td><strong>HR Screening</strong></td>
                                                         <td>Started:5th of June</td>
-                                                         <td><button class="btn btn-primary btn-sm vacancy_details">View Details</button></td></tr>
+                                                         <td><button class="btn btn-primary btn-sm menuOn vacancy_details">View Details</button></td></tr>
                                                     <tr><td><strong>Technical Round1</strong></td>
                                                         <td>Started:15th of June</td>
-                                                         <td><button class="btn btn-primary btn-sm vacancy_details">View Details</button></td></tr>
+                                                         <td><button class="btn btn-primary btn-sm menuOn vacancy_details">View Details</button></td></tr>
                                             <tr><td><strong>Technical Round2</strong></td>
                                                         <td>Started:25th of June</td>
-                                                         <td><button class="btn btn-primary btn-sm vacancy_details">View Details</button></td></tr>
+                                                         <td><button class="btn btn-primary btn-sm menuOn vacancy_details">View Details</button></td></tr>
                                             <tr><td><strong>Final HR Round</strong></td>
                                                         <td>Not Yet Started</td>
-                                                        <td><button class="btn btn-primary btn-sm schedule">Schedule</button></td>
+                                                        <td><button class="btn btn-primary btn-sm menuOn round_schedule">Schedule</button></td>
                                                         </tr>
                                             </table>  
                                             </td>
