--- a/Landing Page/view/promote.html
+++ b/Landing Page/view/promote.html
@@ -2,11 +2,44 @@
     <html>
         <head>
     <script src="../js/jquery.min.js"></script>
+            <script>
+                $(document).ready(function(){
+                $(".show11,.facebook,.twitter,.linkedin").hide();
+                    
+                $(".post").click(function(e) {
+                    e.preventDefault();
+                    $(".show11").toggle();
+                    });
+                $(".fb").click(function(e){
+                        e.preventDefault();
+                        $(".facebook").toggle();
+                        $(".twitter, .linkedin").hide();
+                    });
+                $(".tw").click(function(e){
+                        e.preventDefault();
+                        $(".twitter").toggle();
+                        $(".facebook, .linkedin").hide();
+                    });
+                $(".in").click(function(e){
+                        e.preventDefault();
+                        $(".linkedin").toggle();
+                        $(".facebook, .twitter").hide();
+                    });
+                    
+                });
+            </script>
            </head>
+        
+        <scrpit>
+        
+           
+        
+        </scrpit>
+        
         <body>
 <!-- Promote Job -->
-							<section class="col-lg-6 connectedSortable">
-                            <div class="box box-success" id="loading-example" style="height:500px">
+							<section class="col-lg-12 connectedSortable">
+                            <div class="box box-success" id="loading-example" style="height: 500px;">
                                 <div class="box-header">
                                    <!-- tools box -->
                                     <div class="pull-right ">
@@ -23,10 +56,8 @@
                                     <h3 class="box-title">Promote Job</h3>
                                 </div><!-- /.box-header -->
                                 <div class="box-body no-padding">
-									<div>
 									<form role="form">
-                                    <div class="box-body">
-										<div class="form-group col-lg-10">
+										<div class="form-group col-lg-6">
                                             <label>Status</label>
                                             <textarea class="form-control" rows="7" placeholder="Enter Status .."></textarea><br>
 												<div class="form-group">
@@ -35,22 +66,62 @@
 												<p class="help-block">Pictures or Video.</p>
 												</div>
 											<div class="box-footer">
-											<button type="submit" class="btn btn-info">Post</button>
+											<button type="submit" class="btn btn-info post">Post</button>
 											<button type="reset" class="btn btn-primary">Cancel</button>
-											</div>
-											
+											</div><br>
+                                            <div class="alert alert-success alert-dismissable show11">
+                                                                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                                                                <i class="fa fa-check"></i><b>Your Status has been posted !!!</b>
+                                            </div>
+										</div>
+										<div class="form-group col-lg-1"><br>
+											<button type="submit" class="btn btn-info fb" style="width:100px"><i class="fa fa-facebook-square"></i>&nbsp; Facebook</button><br><br>
+											<button type="submit" class="btn btn-info tw" style="width:100px"><i class="fa fa-twitter-square"></i>&nbsp; Twitter</button><br><br>
+											<button type="submit" class="btn btn-info in" style="width:100px"><i class="fa fa-linkedin-square"></i>&nbsp; LinkedIn</button>
+								        </div>
+                                        <div class="col-lg-4">
+                                            <div class="form-group well facebook">
+                                                <h4><i class="fa fa-facebook-square"></i>&nbsp; Facebook</h4><br>
+                                                <small>Username: D Mahapatra</small>
+                                                <hr />
+                                                <input type="checkbox" /> Post to Profile
+                                                <hr />
+                                                <strong>Groups</strong><br><br>
+                                                <input type="checkbox" /> Bhubaneshwar Recruit Group<br>
+                                                <input type="checkbox" /> ProcessMAP Group<br>
+                                                <input type="checkbox" /> Job Online Group<br>
+                                                <input type="checkbox" /> Software Engg Group<br>
+                                                <input type="checkbox" /> Engineers Group<br>
+                                            </div>
+                                            <div class="form-group well twitter">
+                                                <h4><i class="fa fa-twitter-square"></i>&nbsp; Twitter</h4><br>
+                                                <small>Username: D Mahapatra</small>
+                                                <hr />
+                                                <input type="checkbox" /> Post to Profile
+                                                <hr />
+                                                <strong>Communities</strong><br><br>
+                                                <input type="checkbox" /> Bhubaneshwar Recruit Group<br>
+                                                <input type="checkbox" /> ProcessMAP Group<br>
+                                                <input type="checkbox" /> Job Online Group<br>
+                                            </div>
+                                            <div class="form-group well linkedin">
+                                                <h4><i class="fa fa-linkedin-square"></i>&nbsp; LinkedIn</h4><br>
+                                                <small>Username: D Mahapatra</small>
+                                                <hr />
+                                                <input type="checkbox" /> Post to Profile
+                                                <hr />
+                                                <strong>Groups</strong><br><br>
+                                                <input type="checkbox" /> Bhubaneshwar Recruit Group<br>
+                                                <input type="checkbox" /> ProcessMAP Group<br>
+                                                <input type="checkbox" /> Job Online Group<br>
+                                                <input type="checkbox" /> Engineers Group<br>
+                                            </div>
                                         </div>
-										<div class="form-group col-lg-2"><br>
-											<button type="submit" class="btn btn-info">Facebook</button><br><br>
-											<button type="submit" class="btn btn-info">Twitter</button><br><br>
-											<button type="submit" class="btn btn-info">LinkedIn</button>
-											</div>
-									</div><!-- /.box-body -->
-									
                                 </form>
-								</div>
+								</div><!-- / box- body-->
+                                </div>
 							</section>
-				<!-- Promote Job ends-->
+<!-- Promote Job ends-->
  <!-- jQuery 2.0.2 -->
           <!--  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
             <!-- jQuery UI 1.10.3 -->
